Closed Bug 621931 Opened 15 years ago Closed 15 years ago

Widget Qt scrolling is slow because of non optimized SetCursor

Categories

(Core Graveyard :: Widget: Qt, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: romaxa, Unassigned)

References

Details

Attachments

(1 file)

On maemo I got ~8% CPU but adding this simple patch.
Attachment #500222 - Flags: review?(doug.turner)
Blocks: 619056
Blocks: 606672
Comment on attachment 500222 [details] [diff] [review] stop multiple SetCursor call with te same cursor ID I would do a early return for code clarity: // if same, bail if (mCursor == aCursor) return NS_OK; Then leave the existing code the same. with that change r+/npodb
Attachment #500222 - Flags: review?(doug.turner)
Attachment #500222 - Flags: review+
Attachment #500222 - Flags: approval2.0+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: