Bug 621931 - Widget Qt scrolling is slow because of non optimized SetCursor. r=dougt a=approval2.0

--HG--
extra : rebase_source : 0eb71df93c39e3deadc3c694cf220746c20ae7ed